--- a/.env.example
+++ b/.env.example
@@ -17,9 +17,10 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=a_cart
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=freestulau_blog
+DB_USERNAME=freestulau_puzzleuser
+DB_PASSWORD=Admin@Hany123456
+
 
 DB_CONNECTION_REE=mysql
 DB_HOST_REE=127.0.0.1
