--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-APP_NAME=cartApp
+APP_NAME=ardillanetApp
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 LOG_VIEWER_ENABLED=false
-APP_DEVELOPMENT=false
+APP_DEVELOPMENT=true
 APP_ADMIN_LANG=false
 PUZZLE_ACTIVE=false
 APP_MAINTENANCE=false
@@ -17,9 +17,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=freestulau_blog
-DB_USERNAME=freestulau_puzzleuser
-DB_PASSWORD=Admin@Hany123456
+DB_DATABASE=ardlil_dbnew202408
+DB_USERNAME=ardlil_usedbnew
+DB_PASSWORD=Db@islamic$$20240806
 
 
 DB_CONNECTION_REE=mysql
